@@ -1,4 +1,4 @@
-#	$OpenBSD: cfgmatch.sh,v 1.2 2006/07/22 01:50:00 dtucker Exp $
+#	$OpenBSD: cfgmatch.sh,v 1.3 2006/11/06 09:27:43 markus Exp $
 #	Placed in the Public Domain.
 
 tid="sshd_config match"
@@ -35,7 +35,7 @@ for p in 1 2; do
 	rm -f $pidfile
 	trace "match permitopen localhost proto $p"
 	${SSH} -$p $fwd -F $OBJ/ssh_config -f somehost \
-	    "echo \$\$ > $pidfile; exec sleep 100" >>$TEST_SSH_LOGFILE 2>&1 ||\
+	    exec sh -c \'"echo \$\$ > $pidfile; exec sleep 100"\' >>$TEST_SSH_LOGFILE 2>&1 ||\
 	    fail "match permitopen proto $p sshd failed"
 	sleep 1;
 	${SSH} -q -$p -p $fwdport -F $OBJ/ssh_config somehost true || \
@@ -48,7 +48,7 @@ for p in 1 2; do
 	rm -f $pidfile
 	trace "match permitopen proxy proto $p"
 	${SSH} -q -$p $fwd -F $OBJ/ssh_proxy -f somehost \
-	    "echo \$\$ > $pidfile; exec sleep 100" >>$TEST_SSH_LOGFILE 2>&1 ||\
+	    exec sh -c \'"echo \$\$ > $pidfile; exec sleep 100"\' >>$TEST_SSH_LOGFILE 2>&1 ||\
 	    fail "match permitopen proxy proto $p sshd failed"
 	sleep 1;
 	${SSH} -q -$p -p $fwdport -F $OBJ/ssh_config somehost true && \
@@ -65,7 +65,7 @@ for p in 1 2; do
 	rm -f $pidfile
 	trace "match permitopen proxy w/key opts proto $p"
 	${SSH} -q -$p $fwd -F $OBJ/ssh_proxy -f somehost \
-	    "echo \$\$ > $pidfile; exec sleep 100" >>$TEST_SSH_LOGFILE 2>&1 ||\
+	    exec sh -c \'"echo \$\$ > $pidfile; exec sleep 100"\' >>$TEST_SSH_LOGFILE 2>&1 ||\
 	    fail "match permitopen w/key opt proto $p sshd failed"
 	sleep 1;
 	${SSH} -q -$p -p $fwdport -F $OBJ/ssh_config somehost true && \
@@ -79,7 +79,7 @@ for p in 1 2; do
 	rm -f $pidfile
 	trace "match permitopen localhost proto $p"
 	${SSH} -$p $fwd -F $OBJ/ssh_config -f somehost \
-	    "echo \$\$ > $pidfile; exec sleep 100" >>$TEST_SSH_LOGFILE 2>&1 ||\
+	    exec sh -c \'"echo \$\$ > $pidfile; exec sleep 100"\' >>$TEST_SSH_LOGFILE 2>&1 ||\
 	    fail "match permitopen proto $p sshd failed"
 	sleep 1;
 	${SSH} -q -$p -p $fwdport -F $OBJ/ssh_config somehost true || \
@@ -97,7 +97,7 @@ for p in 1 2; do
 	rm -f $pidfile
 	trace "match permitopen proxy w/key opts proto $p"
 	${SSH} -q -$p $fwd -F $OBJ/ssh_proxy -f somehost \
-	    "echo \$\$ > $pidfile; exec sleep 100" >>$TEST_SSH_LOGFILE 2>&1 ||\
+	    exec sh -c \'"echo \$\$ > $pidfile; exec sleep 100"\' >>$TEST_SSH_LOGFILE 2>&1 ||\
 	    fail "match override permitopen proto $p sshd failed"
 	sleep 1;
 	${SSH} -q -$p -p $fwdport -F $OBJ/ssh_config somehost true && \
